Nginx-ingress-DC1/base/mandatory.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller-dc1
  namespace: example-ns
  labels:
    app.kubernetes.io/name: ingress-nginx-dc1
    app.kubernetes.io/part-of: ingress-nginx-dc1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx-dc1
      app.kubernetes.io/part-of: ingress-nginx-dc1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx-dc1
        app.kubernetes.io/part-of: ingress-nginx-dc1
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
    spec:
      # wait up to five minutes for the drain of connections
      terminationGracePeriodSeconds: 300
      serviceAccountName: nginx-ingress-serviceaccount-dc1
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: nginx-ingress-controller-dc1
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.26.1
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configuration-dc1
            - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services-dc1
            - --udp-services-configmap=$(POD_NAMESPACE)/udp-services-dc1
            - --publish-service=$(POD_NAMESPACE)/ingress-nginx--dc1
            - --annotations-prefix=nginx.ingress.kubernetes.io
            - --watch-namespace=example-ns
            - --default-ssl-certificate=example-ns/star-example-com-tls
          securityContext:      
            allowPrivilegeEscalation: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            # www-data -> 33
            runAsUser: 33
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          lifecycle:
            preStop:
              exec:
                command:
                  - /wait-shutdown
---
