Nginx-ingress-DC1/base/ingress-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx-dc1
  labels:
    app.kubernetes.io/name: ingress-nginx-dc1
    app.kubernetes.io/part-of: ingress-nginx-dc1
spec:
  loadBalancerIP: 192.168.1.20
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx-dc1
    app.kubernetes.io/part-of: ingress-nginx-dc1
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
