Nginx-ingress-DC1/base/ingress.yaml
# N.B. You need to install the NGINX ingress implementation in your cluster first by following;
# https://github.com/kubernetes/ingress-nginx/blob/master/docs/deploy/index.md
#
# If You're using Docker Desktop, that would be running these commands:
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/mandatory.yaml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/cloud-generic.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress-dc1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # removes any restriction on upload size
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # Proxy buffer
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    
spec:
  tls:
  - secretName: star-example-com-tls 
    hosts: 
    - "*.example.com"
    
  rules:
    - host: example
      http:
        paths:
          - backend:
              serviceName: example
              servicePort: 8080
